Support for any expressions in parameters to pattern observers and guards and views
git-svn-id: http://svn.codehaus.org/esper/esper/branches/major300@1547 d91eb1b3-1215-0410-9718-d41490442091